# NewChallenges

./: .gitignore  README.md  api-doc.md  generate_json_schema.sh  live-challenges-internal-test-doc.md
aws_resources/lambda-tests/: pyproject.toml
aws_resources/lambda-tests/lambdas/: fetch_events_from_dynamodb_lambda_handler.py
aws_resources/lambda-tests/tests/: fetch_events_from_dynamodb_lambda_test.py  utils.py
aws_resources/lambda-tests/tests/resources/fetch_events/: block_break_goal.challenge.json  block_break_goal.existing_events.json
aws_resources/lambda-tests/tests/resources/fetch_events/partial_missing_events_block_break_goal/: partial_missing_events_block_break_goal.challenge.json  partial_missing_events_block_break_goal.existing_events.json
aws_resources/lambda-tests/tests/resources/fetch_events/too_many_events_block_break_goal/: too_many_events_block_break_goal.challenge.json  too_many_events_block_break_goal.existing_events.json
aws_resources/lambda-tests/tests/resources/fetch_events/too_many_events_too_many_removed_block_break_goal/: too_many_events_too_many_removed_block_break_goal.challenge.json  too_many_events_too_many_removed_block_break_goal.existing_events.json
builder_website/: .gitignore  .npmrc  .prettierrc  .prettierrc.json  JSON  Java  README.md  challenges_schema.json  cypress.config.ts  generate_json_schema.sh  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
criteria-interfaces/: package-lock.json  package.json  tsconfig.json
docs/: HOW_TO_USE_GIFS_AS_ICONS.txt  (+5 more)
(+814 files in other folders)
