[tool.poetry]
name = "lambda-tests"
version = "0.1.0"
description = ""
authors = ["Felix Naumann <wand516@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.33"
moto = "^5.0.16"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
